chore(ci): use npm install in CI to avoid lockfile issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm ci
+      - run: npm install --no-audit --no-fund
       - run: npm test -- --ci --passWithNoTests
 name: Tests
 
