--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "@react-navigation/native": "^6",
     "@react-navigation/stack": "^6",
     "expo": "~52.0.20",
-    "expo-av": "~13",
-    "expo-file-system": "~15",
-    "expo-media-library": "~15",
-    "expo-notifications": "~0.24",
-    "expo-secure-store": "~12",
+    "expo-av": "~15.0.2",
+    "expo-file-system": "~18.0.12",
+    "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.14",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "lucide-react-native": "^0.542.0",
-    "react": "18.2.0",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2",
-    "react-native-reanimated": "^3",
-    "react-native-safe-area-context": "^4",
-    "react-native-screens": "^3"
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
