--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/bottom-tabs": "^6",
     "@react-navigation/native": "^6",
     "@react-navigation/stack": "^6",
+    "@supabase/supabase-js": "^2.56.1",
     "expo": "~52.0.20",
     "expo-av": "~15.0.2",
     "expo-file-system": "~18.0.12",
+    "expo-haptics": "~14.0.1",
     "expo-media-library": "~17.0.6",
     "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
@@ -29,8 +31,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-haptics": "~14.0.1"
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
