--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
+    "expo-video": "^2.2.2",
     "lucide-react-native": "^0.542.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
