--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6",
     "@react-navigation/stack": "^6",
     "@supabase/supabase-js": "^2.56.1",
+    "@tanstack/react-query": "^5.87.1",
     "expo": "~52.0.20",
     "expo-av": "~15.0.2",
     "expo-file-system": "~18.0.12",
